--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ args==0.1.0
 click>=8.0.3
 clint==0.5.1
 numpy>=1.21.0
+pytz>=2020.1
+tzdata>=2021.1
 pandas>=2.0.0
 python-dateutil==2.8.2
 numba==0.59.0
