--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,8 @@ install_requires =
     click>=8.0.3
     clint==0.5.1
     numpy>=1.21.0
+    pytz>=2020.1
+    tzdata>=2021.1
     pandas>=2.0.0
     python-dateutil==2.8.2
     numba==0.59.0
